Make sure nextmatch header row filters have enough space ACL dialog needed this - 14% is too small

--- a/api/templates/default/etemplate2.css
+++ b/api/templates/default/etemplate2.css
@@ -2216,6 +2216,7 @@ lion-validation-feedback[type] {
 
 .nextmatch_header_row > div > et2-select, .nextmatch_header_row > div > et2-select-cat {
     max-width: 14%;
+    min-width: fit-content;
 }
 
 .nextmatch_header_row > .header_row_right {
